update protected routes

--- a/src/App.scss
+++ b/src/App.scss
@@ -4,6 +4,11 @@
   box-sizing: border-box;
 }
 
+.LoginSignup {
+  height: 100vh;
+  border: 5px solid black;
+}
+
 .web-layout {
   section {
     margin-top: 56px;
