--- a/src/App.scss
+++ b/src/App.scss
@@ -19,93 +19,113 @@ nav {
       color: white;
     }
 
-    .offcanvas {
-      .offcanvas-body {
-        .navbar-nav {
-          .nav-item {
-            margin: 0 .4rem;
+    .navbar-nav {
+      .nav-item {
+        margin: 0 .4rem;
 
-            &:nth-child(2) {
-              margin: 0;
-              padding: 8px;
-            }
+        &:nth-child(2) {
+          margin: 0;
+          padding: 8px;
+        }
 
-            &:nth-child(3) {
-              margin: 0;
-              padding: 8px;
-            }
+        &:nth-child(3) {
+          margin: 0;
+          padding: 8px;
+        }
 
-            &:nth-child(4) {
-              margin: 0;
-              padding: 8px;
-            }
+        &:nth-child(4) {
+          margin: 0;
+          padding: 8px;
+        }
 
 
-            &:last-child {
+        &:last-child {
 
-              margin: 0;
-            }
+          margin: 0;
+        }
 
-            .nav-link {
-              color: white;
-              transition: 300ms;
-            }
+        .nav-link {
+          color: white;
+          transition: 300ms;
+        }
 
-            .search {
-              height: 1.5rem;
-              border: none;
-              border-radius: 4px;
-              background-color: white;
-              overflow: hidden;
-              padding: 0 .5rem;
+        .search {
+          height: 1.5rem;
+          border: none;
+          border-radius: 4px;
+          background-color: white;
+          overflow: hidden;
+          padding: 0 .5rem;
 
 
-              input[type='text'] {
-                height: 1.2rem;
-                width: 170px;
-                border: none;
-                margin: 0 .2rem;
-                background-color: transparent;
+          input[type='text'] {
+            height: 1.2rem;
+            width: 170px;
+            border: none;
+            margin: 0 .2rem;
+            background-color: transparent;
 
-                &:focus {
-                  outline: none;
-                }
-              }
-            }
-
-            .form-select {
-              height: 1.5rem;
-              width: 150px;
-              font-size: .9rem;
-              font-weight: 800;
-              padding-top: 0;
-              padding-bottom: 0;
-            }
-
-            .profile {
-              height: 2rem;
-              width: 2rem;
-              background-color: white;
-              cursor: pointer;
-              border-radius: 50%;
-              overflow: hidden;
-
-              img {
-                height: 100%;
-                width: 100%;
-              }
-            }
-
-            &:hover>.nav-link {
-              color: rgb(221, 221, 221);
-              transition: 300ms;
-            }
-
-            .active {
-              color: rgb(221, 221, 221);
+            &:focus {
+              outline: none;
             }
           }
         }
+
+        .form-select {
+          height: 1.5rem;
+          width: 150px;
+          font-size: .9rem;
+          font-weight: 800;
+          padding-top: 0;
+          padding-bottom: 0;
+        }
+
+        .profile {
+          height: 2rem;
+          width: 2rem;
+          background-color: white;
+          cursor: pointer;
+          border-radius: 50%;
+          overflow: hidden;
+
+          img {
+            height: 100%;
+            width: 100%;
+          }
+        }
+
+        &:hover>.nav-link {
+          color: rgb(221, 221, 221);
+          transition: 300ms;
+        }
+
+        .active {
+          color: rgb(221, 221, 221);
+        }
+      }
+    }
+  }
+}
+
+footer {
+  background-color: $base-Color;
+
+  .navbar-nav {
+    .nav-item {
+      margin: 0 .4rem;
+
+      .nav-link {
+        color: white;
+        transition: 300ms;
+      }
+
+      &:hover>.nav-link {
+        color: rgb(221, 221, 221);
+        transition: 300ms;
+      }
+
+      .nav-link.active {
+        color: rgb(221, 221, 221);
       }
     }
   }
@@ -405,7 +425,7 @@ nav {
 .web-layout {
   section {
     margin-top: 56px;
-    height: calc(75vh - 64px);
+    height: calc(100vh - 112px);
 
     .dragable {
       position: relative;
@@ -593,20 +613,20 @@ nav {
 
   .web-layout {
     section {
-      height: calc(100vh - 120px);
+      height: calc(100vh - 112px);
 
       .dragable {
         .bricks-wall {
-          height: calc(100vh - 120px);
+          height: calc(100vh - 112px);
         }
 
         .chevron-left {
-          height: calc(100vh - 120px);
+          height: calc(100vh - 112px);
           width: 7%;
         }
 
         .chevron-right {
-          height: calc(100vh - 120px);
+          height: calc(100vh - 112px);
           width: 7%;
         }
       }
