--- a/src/App.scss
+++ b/src/App.scss
@@ -604,6 +604,7 @@ footer {
 // `lg` applies to medium devices (tablets, less than 992px)
 @media (max-width: 991.98px) {
   nav {
+
     .offcanvas {
       background-color: rgb(117, 117, 117);
 
@@ -746,6 +747,10 @@ footer {
 
 // `md` applies to small devices (landscape phones, less than 768px)
 @media (max-width: 767.98px) {
+  footer {
+    .navbar-nav {}
+  }
+
   .LoginSignup {
     .main {
       position: static;
