--- a/src/App.scss
+++ b/src/App.scss
@@ -593,6 +593,22 @@ footer {
         display: flex;
         flex-wrap: wrap;
         justify-content: center;
+
+        .profile {
+          position: relative;
+
+          .img-btn {
+            border: none;
+            background: none;
+            position: absolute;
+            top: 5px;
+            right: 5px;
+
+            .edit-icon {
+              font-size: 1.3rem;
+            }
+          }
+        }
       }
 
       .sketchpad {
@@ -617,6 +633,15 @@ footer {
         span {
           text-decoration: underline;
         }
+      }
+    }
+
+    .sketchboard {
+      .Bricks-select {
+        width: 50%;
+        min-width: 200px;
+        margin-left: .5rem;
+        margin-bottom: 1rem;
       }
     }
   }
