--- a/src/App.scss
+++ b/src/App.scss
@@ -196,10 +196,13 @@ footer {
         }
 
         .bttn {
-          height: 2.3rem;
+          height: 3.5rem;
           width: 100%;
           border-radius: 10px;
           border: none;
+          display: flex;
+          align-items: center;
+          justify-content: center;
           background-color: $base-Color;
           color: white;
           transition: 400ms;
@@ -638,6 +641,97 @@ footer {
         min-width: 200px;
         margin-left: .5rem;
         margin-bottom: 1rem;
+      }
+    }
+
+    .user-profile {
+      height: calc(100vh - 112px);
+      display: flex;
+      justify-content: center;
+      align-items: center;
+
+      .content {
+        margin: 1rem;
+        padding: 1rem .5rem;
+        border-radius: 10px;
+        box-shadow: 0 0 5px rgba(0, 0, 0, 0.507);
+        min-width: 200px;
+        width: 500px;
+        height: 462px;
+        overflow: auto;
+
+        &::-webkit-scrollbar {
+          width: 12px;
+        }
+
+        &::-webkit-scrollbar-thumb {
+          background-color: $base-Color;
+          border-radius: 10px;
+        }
+
+        .dp-wrapper {
+          width: 100%;
+          display: flex;
+          justify-content: center;
+
+          .dp {
+            position: relative;
+            border-radius: 50%;
+            overflow: hidden;
+            height: 150px;
+            width: 150px;
+            box-shadow: 0 0 5px rgba(0, 0, 0, 0.438);
+
+            .edit {
+              position: absolute;
+              height: 20px;
+              width: 20px;
+              top: 23px;
+              right: 23px;
+              padding: .1rem;
+              display: flex;
+              justify-content: center;
+              align-items: center;
+              background-color: black;
+              border-radius: 5px;
+              color: white;
+              font-size: .7rem;
+              cursor: pointer;
+            }
+          }
+        }
+
+        .form {
+          padding: .5rem .5rem;
+
+          .input-wrapper {
+            display: flex;
+          }
+
+          .data-wrapper {
+            padding: .5rem 0;
+
+            .val-edit {
+              display: flex;
+              width: 100%;
+              box-shadow: 0 0 5px rgba(0, 0, 0, 0.507);
+              border-radius: 5px;
+              padding: .5rem;
+
+              .val {
+                width: 95%;
+                user-select: none;
+              }
+
+              .valEdit {
+                width: 5%;
+                border: none;
+                background-color: transparent;
+                cursor: pointer;
+              }
+            }
+          }
+        }
       }
     }
   }
