--- a/src/App.scss
+++ b/src/App.scss
@@ -50,6 +50,16 @@ nav {
           transition: 300ms;
         }
 
+        .adSearch {
+          height: 100%;
+          display: flex;
+          align-items: center;
+          color: white;
+          cursor: pointer;
+        }
+
+
+
         .search {
           height: 1.5rem;
           border: none;
@@ -103,6 +113,32 @@ nav {
         .active {
           color: rgb(221, 221, 221);
         }
+      }
+    }
+  }
+}
+
+.advanceSearchPanel {
+  width: 100%;
+  color: black;
+  z-index: 100000;
+  position: absolute;
+  background-color: white;
+  border-bottom-left-radius: 20px;
+  border-bottom-right-radius: 20px;
+  z-index: 10000000;
+
+  .AdvanceSearchLg {
+    width: 100%;
+    padding: .5rem;
+    display: flex;
+    flex-wrap: wrap;
+
+    .ac-no {
+      padding-left: .3rem;
+
+      &:focus {
+        outline: none;
       }
     }
   }
@@ -586,7 +622,6 @@ footer {
     }
 
     .memorialize {
-      margin-top: 80px !important;
 
       .main {
         display: flex;
@@ -722,13 +757,6 @@ footer {
                 width: 95%;
                 user-select: none;
               }
-
-              .valEdit {
-                width: 5%;
-                border: none;
-                background-color: transparent;
-                cursor: pointer;
-              }
             }
           }
         }
@@ -745,10 +773,9 @@ footer {
 
         margin: 1rem;
         padding: 1rem .5rem;
-        border-radius: 10px;
         box-shadow: 0 0 5px rgba(0, 0, 0, 0.507);
         min-width: 200px;
-        width: 700px;
+        width: 1000px;
         height: 462px;
         overflow: auto;
 
@@ -762,48 +789,277 @@ footer {
         }
 
         .question {
+          position: relative;
           display: flex;
-          align-items: flex-start;
+          align-items: center;
+          background-color: lightgray;
           cursor: pointer;
 
           .icon {
-            margin-right: 1rem;
-            transition: 600ms;
+            padding: 0 1rem;
           }
 
-          .icon.active {
-            transform: rotate(-180deg);
-            transition: 600ms;
+          p {
+            margin: .5rem;
+          }
+        }
+
+        .question.active {
+          background-color: $base-Color;
+
+          .icon {
+            color: white;
+          }
+
+          p {
+            color: white;
+          }
+        }
+
+        .answer {
+          position: relative;
+          border: 1px solid lightgray;
+          border-top: none;
+          border-left: none;
+          padding: 0 1rem;
+
+          &::before {
+            content: '';
+            position: absolute;
+            top: 0;
+            left: 0;
+            bottom: 0;
+            width: 5px;
+            background-color: $base-Color;
           }
         }
       }
     }
 
     .pricing {
+      display: flex;
+      justify-content: center;
+
+      .mainWrapper {
+        margin: 1rem;
+        padding: 1rem .5rem;
+        display: flex;
+        flex-wrap: wrap;
+        width: 100%;
+
+        .Card {
+          width: 300px;
+          background-color: rgb(34, 34, 34);
+          padding: .5rem;
+          transform: scale(1);
+          transition: 600ms;
+
+          .Card-inner {
+            height: 100%;
+            width: 100%;
+            border: 1px solid $base-Color;
+            transition: 600ms;
+
+            .name {
+              height: 60px;
+              display: flex;
+              justify-content: center;
+              align-items: center;
+              font-size: 1.3rem;
+              color: $base-Color;
+              font-weight: 600;
+              letter-spacing: 1px;
+              // border: 1px solid white;
+            }
+
+            .price {
+              display: flex;
+              justify-content: center;
+              align-items: center;
+
+              .pr {
+                height: 150px;
+                width: 150px;
+                border: 3px solid $base-Color;
+                border-radius: 50%;
+
+                .pr2 {
+                  height: 100%;
+                  width: 100%;
+                  border: 1px solid $base-Color;
+                  border-radius: 50%;
+                  display: flex;
+                  justify-content: center;
+                  align-items: center;
+                  color: white;
+                  font-size: 1.5rem;
+                  font-weight: bold;
+                }
+              }
+            }
+
+            .des {
+              padding: .5rem;
+              color: white;
+              text-align: center;
+            }
+          }
+
+          &:hover {
+            background-color: $base-Color;
+            box-shadow: 0 0 10px black;
+            border-radius: 20px;
+            transform: scale(1.08);
+            transition: 600ms;
+            z-index: 1000;
+
+            .Card-inner {
+              border-color: white;
+              border-radius: 20px;
+              transition: 600ms;
+
+              .name {
+                color: white;
+              }
+
+              .price {
+                .pr {
+                  border-color: white;
+
+                  .pr2 {
+                    border-color: white;
+                  }
+                }
+              }
+            }
+          }
+        }
+
+        .panelWrapper {
+          min-width: 200;
+          width: 500px;
+          border: 1px solid lightgray;
+          padding: 1rem;
+          border-radius: 20px;
+        }
+      }
+    }
+
+    .advanceSearchLessLg {
       height: calc(100vh - 112px);
       display: flex;
       justify-content: center;
       align-items: center;
 
       .mainWrapper {
-
         margin: 1rem;
         padding: 1rem .5rem;
         border-radius: 10px;
         box-shadow: 0 0 5px rgba(0, 0, 0, 0.507);
         min-width: 200px;
-        width: 700px;
+        width: 500px;
         height: 462px;
         overflow: auto;
+      }
+    }
 
-        //   &::-webkit-scrollbar {
-        //     width: 7px;
-        //   }
+    .funds {
+      height: calc(100vh - 112px);
+      display: flex;
+      justify-content: center;
+      align-items: center;
 
-        //   &::-webkit-scrollbar-thumb {
-        //     background-color: $base-Color;
-        //     border-radius: 10px;
-        //   }
+      .fundsrows {
+        max-height: 300px;
+        overflow-x: hidden;
+        overflow-y: auto;
+      }
+
+      .funds-links {
+        display: flex;
+        color: black;
+        text-decoration: none;
+        border-radius: 20px;
+        padding: .3rem;
+        transition: 200ms;
+
+        &:hover {
+          background-color: $base-Color-Hover;
+          color: white;
+          transition: 200ms;
+        }
+      }
+
+    }
+
+    .donation {
+
+      height: calc(100vh - 112px);
+      display: flex;
+      justify-content: center;
+      align-items: center;
+
+
+      .mainWrapper {
+        margin: 1rem;
+        padding: 1rem .5rem;
+        width: 1000px;
+        box-shadow: 0 0 5px rgba(0, 0, 0, 0.507);
+        border-radius: 10px;
+
+        .donationRows {
+          max-height: 300px;
+          overflow-y: auto;
+          overflow-x: hidden;
+
+          &::-webkit-scrollbar {
+            width: 7px;
+          }
+
+          &::-webkit-scrollbar-thumb {
+            background-color: $base-Color;
+            border-radius: 10px;
+          }
+        }
+      }
+    }
+
+    .searchResults {
+
+      height: calc(100vh - 112px);
+      display: flex;
+      justify-content: center;
+      align-items: center;
+
+      .mainWrapper {
+        margin: 1rem;
+        padding: 1rem .5rem;
+        height: 500px;
+        width: 1000px;
+        box-shadow: 0 0 5px rgba(0, 0, 0, 0.507);
+        border-radius: 10px;
+        overflow: auto;
+
+        &::-webkit-scrollbar {
+          width: 7px;
+        }
+
+        &::-webkit-scrollbar-thumb {
+          background-color: $base-Color;
+        }
+
+        .searchHover {
+          background-color: $base-Color;
+          color: white;
+          border-radius: 5px;
+          transition: 200ms;
+
+          &:hover {
+            background-color: $base-Color-Hover;
+            color: white;
+            transition: 200ms;
+          }
+        }
       }
     }
   }
